Experiência Profissionais - controladoria

--- a/index.html
+++ b/index.html
@@ -1,21 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ana Manuella Ribeiro - Curriculum Vitae</title>
 </head>
+
 <body>
     <header>
         <h1><strong>Ana Manuella Ribeiro</strong></h1>
-        <h2><em>Desenvolvedora Front-End Junior</em></h2>
+        <h2><em>Desenvolvedora Full Junior</em></h2>
         <p>Trobogy - Salvador <span>&#8226;</span> Salvador, Bahia<br>
             Cel.: (71) 9 8419-9762 | 9 8259-3895 <span>&#8226;</span> ribeiro.anamanuella@gmail.com <br>
-            <a href="https://www.linkedin.com/in/manu-ribeiro-dev/" target="_blank"> Linkedin </a> <span>&#8226;</span> <a href="github.com/anamanuellar
+            <a href="https://www.linkedin.com/in/manu-ribeiro-dev/" target="_blank"> Linkedin </a> <span>&#8226;</span>
+            <a href="github.com/anamanuellar
             " target="_blank">GitHub</a>
 
-        
+        <h3> Resumo Profissional</h3>
+        <hr style="margin-left: 0em;" width="50%">
+        <p style="text-align:justify;">Sou uma profissional pós-graduada em Administração com 10 anos de experiência em
+            finanças corporativas e gestão de equipes em empresa de grande porte na área de hotelaria. Atualmente, estou
+            em transição de carreira para o Desenvolvimento Full-Stack e tenho me dedicado a aprimorar minhas
+            habilidades técnicas linguagens de programação como Node.js, JavaScript, Typescript e Python, linguagem de
+            marcação e estilo como HTML5, CSS3, além de frameworks como React Native, ReactJS, VueJS, Bootstrap entre
+            outros. Possuo conhecimentos em bancos de dados como MySQL e SQLite, bem como em ferramentas como Git e
+            Trello. Sou capaz de aplicar minha experiência anterior em finanças e liderança de equipes para desenvolver
+            soluções tecnológicas de forma eficiente e colaborativa. Estou em busca de uma oportunidade para me
+            desenvolver ainda mais nessa área e contribuir para o sucesso da empresa. Além disso, possuo vivência
+            internacional e inglês avançado, o que me permite trabalhar em ambientes multiculturais e em projetos
+            globais.</p>
         </p>
+
+        <section>
+            <h3> Experiência Profissional</h3>
+            <hr style="margin-left: 0em;" width="50%">
+            <article>
+                <h3>Assistente de Controladoria</h3>
+                <p><strong>Empresa:</strong> Accor</p>
+                <p><strong>Período:</strong> Dezembro 2019 - Atual</p>
+                <ul>
+                    <li>Acompanhar as despesas operacionais e validar as análises e variações dentro do P&L</li>
+                    <li>Atuar em conjunto com a equipe de controladoria na elaboração do orçamento anual e no fechamento
+                        do reporting
+                        mensal.</li>
+                    <li>Apoiar na elaboração de estratégias financeiras para o crescimento do negócio.</li>
+                </ul>
+            </article>
+
     </header>
+    <main>
+
+    </main>
 </body>
+
 </html>
