--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <article>
                 <h3>Assistente de Controladoria</h3>
                 <p><strong>Empresa:</strong> Accor</p>
-                <p><strong>Período:</strong> Dezembro 2019 - Atual</p>
+                <p><strong>Período:</strong> Dezembro 2021 - Atual</p>
                 <ul>
                     <li>Acompanhar as despesas operacionais e validar as análises e variações dentro do P&L</li>
                     <li>Atuar em conjunto com a equipe de controladoria na elaboração do orçamento anual e no fechamento
@@ -47,7 +47,48 @@
                     <li>Apoiar na elaboração de estratégias financeiras para o crescimento do negócio.</li>
                 </ul>
             </article>
-
+            <article>
+                <h3>Gerente Geral</h3>
+                <p><strong>Empresa:</strong> Accor</p>
+                <p><strong>Período:</strong> Novembro 2020 - Junho 2021</p>
+                <ul>
+                    <li> Gerenciamento e promoção dos produtos e serviços do hotel para garantir a satisfação do hóspede
+                        e o aumento de receita</li>
+                    <li>Gestão financeira através do acompanhamento e análise de indicadores-chave de performance e
+                        demonstrativos
+                        financeiros, como balanço patrimonial, DRE, controle de fluxo de caixa, conciliação bancária,
+                        contas a pagar/receber e
+                        faturamento.</li>
+                    <li>Atendimento ao clientes internos e externos e fornecedores, mantendo um relacionamento estreito
+                        para garantir a satisfação e
+                        solucionar eventuais problemas</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Subgerente</h3>
+                <p><strong>Empresa:</strong> Accor</p>
+                <p><strong>Período:</strong> Maio 2020 - Novembro 2019</p>
+                <ul>
+                    <li> Acompanhamento e avaliação do desempenho de vendas, realizando previsão de ocupação, receita e
+                        despesas, bem
+                        como gestão de atendimento ao cliente e análise PDCA através de KPIs e métricas para garantir a
+                        satisfação do cliente e
+                        proporcionar novas experiências através dos serviços.</li>
+                    <li>Análise e avaliação do desempenho por meio da compilação de dados, comparação com o mercado e
+                        métricas para
+                        projetar o crescimento da empresa nos próximos meses, elaboração de relatórios para envio aos
+                        investidores e diretoria.</li>
+                    <li>Elaboração de planejamento e execução de treinamentos, administração de folha de pagamento e
+                        benefícios, controle de
+                        fluxo de documentos, escala de trabalho, controle de ponto, avaliações de desempenho e
+                        monitoramento do clima
+                        organizacional, bem como condução de ações relacionadas à pesquisa de clima, gestão de
+                        performance, desenvolvimento
+                        de liderança e retenção dos colaboradores.
+                    </li>
+                </ul>
+            </article>
+        </section>
     </header>
     <main>
 
