--- a/index.html
+++ b/index.html
@@ -89,6 +89,27 @@
                 </ul>
             </article>
         </section>
+
+        <section>
+            <h3>Educação</h3>
+            <hr style="margin-left: 0em;" width="50%">
+            <article>
+                <h3><i>MBA em Gestão, Empreendedorismo e Marketing</i></h3>
+                <p><strong>Universidade:</strong> PUCRS</p>
+                <p><strong>Ano de Formatura:</strong> 2019</p>
+            </article>
+            <br>
+            <article>
+                <h3><i>Bacharel em Turismo</i></h3>
+                <p><strong>Universidade:</strong> Unijorge</p>
+                <p><strong>Ano de Formatura:</strong> 2008</p>
+            </article>
+        </section>
+
+
+
+
+
     </header>
     <main>
 
