Adicionando habilidades e contato

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             internacional e inglês avançado, o que me permite trabalhar em ambientes multiculturais e em projetos
             globais.</p>
         </p>
-
+    </header>
+    <main>
         <section>
             <h3> Experiência Profissional</h3>
             <hr style="margin-left: 0em;" width="50%">
@@ -93,27 +94,54 @@
         <section>
             <h3>Educação</h3>
             <hr style="margin-left: 0em;" width="50%">
-            <article>
-                <h3><i>MBA em Gestão, Empreendedorismo e Marketing</i></h3>
-                <p><strong>Universidade:</strong> PUCRS</p>
-                <p><strong>Ano de Formatura:</strong> 2019</p>
-            </article>
+            <table style="width:100%">
+                <tr>
+                    <td><i><strong>MBA em Gestão, Empreendedorismo e Marketing</strong></i></td>
+                </tr>
+                <tr>
+                    <td><strong>Universidade:</strong> PUCRS </td>
+                </tr>
+                <tr>
+                    <td><strong>Ano de Formatura:</strong> 2019</td>
+                </tr>
+            </table>
             <br>
-            <article>
-                <h3><i>Bacharel em Turismo</i></h3>
-                <p><strong>Universidade:</strong> Unijorge</p>
-                <p><strong>Ano de Formatura:</strong> 2008</p>
-            </article>
+            <table style="width:100%">
+                <tr>
+                    <td><i><strong>Bacharel em Turismo</strong></i></td>
+                </tr>
+                <tr>
+                    <td><strong>Universidade:</strong> Unijorge </td>
+                </tr>
+                <tr>
+                    <td><strong>Ano de Formatura:</strong> 2008</td>
+                </tr>
+            </table>
         </section>
 
-
-
-
-
-    </header>
-    <main>
-
+        <section>
+            <h3>Habilidades</h3>
+            <hr style="margin-left: 0em;" width="50%">
+            <ul>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>SQL</li>
+                <li>React</li>
+                <li>React Native</li>
+            </ul>
+        </section>
     </main>
+
+    <footer>
+        <p style="text-align: center;"><strong>Contato: <i>ribeiro.anamanuella@gmail.com</i> | Telefone: (71) 98259-3895</strong></p>
+    </footer>
+
+
+
+
+
 </body>
 
 </html>
